5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1667_2326.log
== TEST (2019-04-16 16:02:47) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()


-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:03:26) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()


-- EXECUTION TIME:
0.167447
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:03:27) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()


-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:03:36) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()


-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:03:37) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()


-- EXECUTION TIME:
0.17856
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:04:01) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()


-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:40) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654
	tempo = 2.3479
	print(esp/tempo)
else:
	esp2 = 3.7654
	tempo = 2.3479


-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:07:52) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654
	tempo = 2.3479
	print(esp/tempo)
else:
	esp2 = 3.7654
	tempo = 2.3479


-- EXECUTION TIME:
0.0971849
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:07:54) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654
	tempo = 2.3479
	print(esp/tempo)
else:
	esp2 = 3.7654
	tempo = 2.3479


-- EXECUTION TIME:
0.169846
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:54) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654
	tempo = 2.3479
	print(esp/tempo)
else:
	esp2 = 3.7654
	tempo = 2.3479


-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:15) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654
	tempo = 2.3479
	print(esp/tempo)
else:
	esp2 = 3.7654
	tempo = 2.3479


-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:08:23) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654
	tempo = 2.3479
	print(esp/tempo)
else:
	esp2 = 3.7654
	tempo = 2.3479


-- EXECUTION TIME:
0.157617
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:08:25) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654
	tempo = 2.3479
	print(esp/tempo)
else:
	esp2 = 3.7654
	tempo = 2.3479


-- EXECUTION TIME:
0.197556
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:25) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654
	tempo = 2.3479
	print(esp/tempo)
else:
	esp2 = 3.7654
	tempo = 2.3479


-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:51) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654, m
	tempo = 2.3479, s
	print(esp/tempo)
else:
	esp2 = 3.7654, m
	tempo = 2.3479, s


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654, m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:07) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 , m
	tempo = 2.3479 , s
	print(esp/tempo)
else:
	esp2 = 3.7654 , m
	tempo = 2.3479 , s


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:37) 
-- CODE:
nomedobruxo = input("nome do bruxo:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:11) 
-- CODE:
nomedobruxo = input( "GINA")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:10:13) 
-- CODE:
nomedobruxo = input( "GINA")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- EXECUTION TIME:
0.11155
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:10:15) 
-- CODE:
nomedobruxo = input( "GINA")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- EXECUTION TIME:
0.18736
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:16) 
-- CODE:
nomedobruxo = input( "GINA")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:43) 
-- CODE:
nomedobruxo = input( "GINA ou HARRY")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:10:44) 
-- CODE:
nomedobruxo = input( "GINA ou HARRY")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- EXECUTION TIME:
0.131451
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:10:45) 
-- CODE:
nomedobruxo = input( "GINA ou HARRY")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- EXECUTION TIME:
0.179837
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:48) 
-- CODE:
nomedobruxo = input( "GINA ou HARRY:")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:10:57) 
-- CODE:
nomedobruxo = input( "GINA ou HARRY:")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- EXECUTION TIME:
0.130749
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:08) 
-- CODE:
nomedobruxo = input( "GINA ou HARRY:")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:46) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:11:54) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- EXECUTION TIME:
0.139296
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:55) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:")
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:31) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:12:38) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- EXECUTION TIME:
0.140396
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:46) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:13:04) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 


-- EXECUTION TIME:
0.169305
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:13:04) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 


-- EXECUTION TIME:
0.119035
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:05) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    esp2 = 3.7654 , m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:13:11) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 


-- EXECUTION TIME:
0.147081
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:

-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:17:43) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/temp2)


-- EXECUTION TIME:
0.169076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2326/main.py", line 9, in <module>
    print(esp2/temp2)
NameError: name 'temp2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:17:44) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/temp2)


-- EXECUTION TIME:
0.191227
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2326/main.py", line 9, in <module>
    print(esp2/temp2)
NameError: name 'temp2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:44) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/temp2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(esp2/temp2)
NameError: name 'temp2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:02) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/temp2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(esp2/temp2)
NameError: name 'temp2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:18:03) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/temp2)


-- EXECUTION TIME:
0.107316
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2326/main.py", line 9, in <module>
    print(esp2/temp2)
NameError: name 'temp2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:18:03) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/temp2)


-- EXECUTION TIME:
0.130148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2326/main.py", line 9, in <module>
    print(esp2/temp2)
NameError: name 'temp2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:18:03) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()
if (nomedobruxo == "GINA"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/temp2)


-- EXECUTION TIME:
0.163911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2326/main.py", line 9, in <module>
    print(esp2/temp2)
NameError: name 'temp2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:12) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "gina"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/temp2)


-- EXECUTION TIME:
0.128252
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2326/main.py", line 10, in <module>
    print(esp2/temp2)
NameError: name 'temp2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:13) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "gina"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/temp2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(esp2/temp2)
NameError: name 'temp2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:43) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "gina"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:49) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "gina"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- EXECUTION TIME:
0.200816
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:50) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "gina"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- EXECUTION TIME:
0.175025
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:51) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "gina"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:52) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "gina"):
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- EXECUTION TIME:
0.137304
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:36) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "gina"):
	nomedobruxo.upper()
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:46) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "gina"):
	nomedobruxo.upper()
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- EXECUTION TIME:
0.148521
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:15) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "GINA"):
	nomedobruxo.upper()
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:23) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "GINA"):
	nomedobruxo.upper()
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- EXECUTION TIME:
0.165348
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:58) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:")

if (nomedobruxo == "GINA"):
	 nomedobruxo.upper()
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- ERROR:
File "XXXX", line 5
    esp = 3.7654 
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:25) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "GINA"):
	 
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:33:31) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "GINA"):
	 
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.7654 
	tempo2 = 2.3479 
	print(esp2/tempo2)


-- EXECUTION TIME:
0.142491
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:58) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "GINA"):
	 
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.764 
	tempo2 = 2.789 
	print(esp2/tempo2)


-- OUTPUT:
1.3495876658300465
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:08) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "GINA"):
	 
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.674 
	tempo2 = 2.789 
	print(esp2/tempo2)


-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:34:15) 
-- CODE:
nomedobruxo = input( " GINA OU HARRY:").upper()

if (nomedobruxo == "GINA"):
	 
	esp = 3.7654 
	tempo = 2.3479 
	print(esp/tempo)
else:
	esp2 = 3.674 
	tempo2 = 2.789 
	print(esp2/tempo2)


-- EXECUTION TIME:
0.137065
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
1.3173180351380422
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
